--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,12 @@
 title: "amir's website"
 ---
 
-This is a Quarto website.
+This is my data set.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+```{r, eval=TRUE,echo=TRUE}
+library("tidyverse")
+read.csv("goat.csv")
+goatdebate <- read.csv("goat.csv")
+goatdebate
 
-```{r}
-1 + 3
 ```
